FIX-destinationsController-and-swagger
